services/alluxio/alluxio-master.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: alluxio-master
  namespace: alluxio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alluxio-master
    spec:
      containers:
      - name: alluxio-master
        image: pblaas/alluxio:latest
        args:
        - master 
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "400m"
            memory: "1024Mi"
        ports:
        - containerPort: 19998
        - containerPort: 19999
