services/alluxio/alluxio-master.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: alluxio-master-svc
  namespace: alluxio
spec:
  type: ClusterIP 
  selector:
    app: alluxio-master
  ports:
    - name: http 
      protocol: TCP
      port: 19999
      targetPort: 19999
    - name: clusterport 
      protocol: TCP
      port: 19998
      targetPort: 19998
