services/alluxio/alluxio-master.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: alluxio-master-ingress
 namespace: alluxio
spec:
 rules:
   - host: alluxio.k8s.yourdomain.ltd
     http:
       paths:
         - path: /
           backend:
             serviceName: alluxio-master-svc
             servicePort: 19999
